--- a/backend/history.txt
+++ b/backend/history.txt
@@ -1,12 +1,4 @@
 #V2
-(contract-call? ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM check-call(u3))
-(contract-call? ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM check-call (u3))
-(contract-call? ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM check-call u3)
-tx-sender
-(contract-call? ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.clar check-call u3)
-(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM check-call u3)
-(contract-call? .predicto 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM check-call u3)
-(contract-call?  'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto check-call u3)
 burn-block-height
 block-height
 (contract-call? predicto winners)
@@ -58,3 +50,52 @@ tx-sender
 (contract-call? .predicto check-play tx-sender u2000000 false)
 (contract-call? .predicto prediction-result false u10000)
 (contract-call? .predicto prediction-result true u10000)
+(contract-call? .predicto check-play tx-sender u2000000 false)
+tx-sender
+(contract-call? .predicto check-play tx-sender u10 true)
+::help
+::set_tx_sender 'ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5 
+::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5 
+::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
+(contract-call? .predicto check-play tx-sender u5 true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u5 true)
+::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 false)
+::set_tx_sender ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u15 false)
+::set_tx_sender ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u25 false)
+::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
+(contract-call? .predicto prediction-result true u2)
+::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
+(contract-call? .predicto prediction-result true u2)
+(contract-call? STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
+tx-sender
+::set_tx_sender 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
+::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u15 true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
+tx-sender
+::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u5 true)
+::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 true)
+::set_tx_sender ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 false)
+::set_tx_sender ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u15 false)
+::set_tx_sender ST2REHHS5J3CERCRBEPMGH7921Q6PYKAADT7JP2VB
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u25 false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
+::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
+::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
+::set_tx_sender ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false u2)
+::set_tx_sender ST3AM1A56AK2C1XAFJ4115ZSV26EB49BVQ10MGCS0
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u50 false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false u2)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
