--- a/backend/history.txt
+++ b/backend/history.txt
@@ -1,101 +1,101 @@
 #V2
-burn-block-height
-block-height
-(contract-call? predicto winners)
-(contract-call? STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto  winners)
-(contract-call? STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto winners)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto winners)
-tx-sender
-(as-contract 'STNHKEPYEPJ8ET55ZZ0M5A34J0R3N5FM2CMMMAZ6)
-tx-sender
-contract-caller
-::help
-::list_functions
-(contract-call? .predicto check-play tx-sender u2000000 true)
-tx-sender
-contract-caller
-(contract-call? .predicto check-play 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX u2000000 true)
-(is-eq tx-sender 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX)
-tx-sender
-(contract-call? .predicto check-play tx-sender u2000000 true)
-tx-sender
-(stx-get-balance tx-sender)
-(contract-call? .predicto check-play tx-sender u2000000 true)
-(stx-get-balance tx-sender)
-(map-get? predictors tx-sender)
-(var-get counter)
-(contract-call? .predicto var-get counter)
-(contract-call? .predicto get-count)
-(contract-call? .predicto check-play tx-sender u2000000 true)
-(contract-call? .predicto get-count)
-(contract-call? .predicto check-play tx-sender u2000000 true)
-(contract-call? .predicto predictor tx-sender)
-(contract-call? .predicto map-data tx-sender)
-(contract-call? .predicto check-play tx-sender u2000000 true)
-(contract-call? .predicto map-data tx-sender)
-(contract-call? .predicto check-play 'ST3NBRSFKX28FQ2ZJ1MAKX58HKHSDGNV5N7R21XCP u2000000 true)
-(contract-call? .predicto check)
-(contract-call? .predicto check-play tx-sender u2000000 true)
-(contract-call? .predicto check)
-(contract-call? .predicto check-play tx-sender u2000000 true)
-(contract-call? .predicto check)
-(contract-call? .predicto check-play tx-sender u2000000 true)
-(contract-call? .predicto prediction-result false u20)
-(contract-call? .predicto check-play tx-sender u2000000 false)
-(contract-call? .predicto prediction-result false u20)
-(contract-call? .predicto check-play tx-sender u2000000 false)
-(contract-call? .predicto prediction-result false u20)
-(contract-call? .predicto check-play tx-sender u2000000 false)
-(contract-call? .predicto prediction-result false u20)
-(contract-call? .predicto check-play tx-sender u2000000 false)
-(contract-call? .predicto prediction-result false u10000)
-(contract-call? .predicto prediction-result true u10000)
-(contract-call? .predicto check-play tx-sender u2000000 false)
-tx-sender
-(contract-call? .predicto check-play tx-sender u10 true)
-::help
-::set_tx_sender 'ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5 
-::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5 
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto map-data tx-sender)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u4000 true)
 ::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
-(contract-call? .predicto check-play tx-sender u5 true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u5 true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u5000 true)
 ::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 false)
-::set_tx_sender ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u15 false)
-::set_tx_sender ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u25 false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u40000 false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
 ::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
-(contract-call? .predicto prediction-result true u2)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+(contract-call? .predicto prediction-result true)
+(contract-call? .predicto prediction-result false)
 ::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
-(contract-call? .predicto prediction-result true u2)
-(contract-call? STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
-tx-sender
-::set_tx_sender 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
-::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u15 true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
-tx-sender
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto map-data tx-sender)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u4000 true)
 ::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u5 true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u3000 true)
 ::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u40000 false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
+::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto map-data tx-sender)
+::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto map-data tx-sender)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u40000 true)
+::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10000 true)
+::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u13000 false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u13000 false)
+::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u13000 true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u200 true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u20000 true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto deduct-fee)
+tx-sender
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u5 true)
+::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
 (contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 true)
-::set_tx_sender ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 false)
-::set_tx_sender ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u15 false)
-::set_tx_sender ST2REHHS5J3CERCRBEPMGH7921Q6PYKAADT7JP2VB
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u25 false)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
-::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
 ::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 false)
 ::set_tx_sender ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false u2)
-::set_tx_sender ST3AM1A56AK2C1XAFJ4115ZSV26EB49BVQ10MGCS0
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u50 false)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false u2)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true u2)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u15 false)
+::set_tx_sender ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u25 false)
+::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u5 true)
+tx-sender
+::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 true)
+::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 false)
+::set_tx_sender ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u15 false)
+::set_tx_sender ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u25 false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+tx-sender
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto map-data ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto map-data 'ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto map-data 'ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5)
+::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+tx-sender
