--- a/backend/history.txt
+++ b/backend/history.txt
@@ -1,101 +1,101 @@
 #V2
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u13000 false)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
-::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u13000 false)
-::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u13000 true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
-::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u200 true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u20000 true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto deduct-fee)
-tx-sender
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u5 true)
-::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 true)
-::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u25 true)
+::get_assets_maps
 ::set_tx_sender ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u15 false)
-::set_tx_sender ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u25 false)
-::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u5 true)
-tx-sender
-::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 true)
-::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u25 true)
+::get_assets_maps
 ::set_tx_sender ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u15 false)
-::set_tx_sender ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u25 false)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u25 true)
+::get_assets_maps
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+::get_assets_maps
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+::get_assets_maps
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+::get_assets_maps
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto transfer-stx-from-escrow u200)
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto transfer-stx-from-escrow u200)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto transfer-stx-from-escrow u100)
+::get_assets_maps
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+::get_assets_maps
 tx-sender
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto map-data ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto map-data 'ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto map-data 'ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5)
-::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto transfer-stx-from-escrow u100)
+::get_assets_maps
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto transfer-stx-from-escrow u100)
+::get_assets_maps
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto transfer-stx-from-escrow u100)
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto transfer-stx-from-escrow u100)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto transfer-stx-from-escrow u100)
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto transfer-stx-from-escrow u100)
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+::get_assets_maps
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto transfer-stx-from-escrow u100)
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto transfer-stx-from-escrow u100)
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto transfer-stx-from-escrow u100)
+::get_assets_maps
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto transfer-stx-from-escrow u100)
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+::get_assets_maps
+::set_tx_sender STNHKEPYEPJ8ET55ZZ0M5A34J0R3N5FM2CMMMAZ6
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 true)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto prediction-result true)
+::get_assets_maps
+::set_tx_sender STNHKEPYEPJ8ET55ZZ0M5A34J0R3N5FM2CMMMAZ6
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto prediction-result true)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 true)
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto prediction-result false)
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+::set_tx_sender STNHKEPYEPJ8ET55ZZ0M5A34J0R3N5FM2CMMMAZ6
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 true)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto prediction-result true)
+::get_assets_maps
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 true)
+::set_tx_sender STNHKEPYEPJ8ET55ZZ0M5A34J0R3N5FM2CMMMAZ6
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto prediction-result false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto prediction-result false)
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 true)
+::set_tx_sender STNHKEPYEPJ8ET55ZZ0M5A34J0R3N5FM2CMMMAZ6
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 true)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto prediction-result true)
+::get_assets_maps
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto prediction-result true)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto get-count)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 true)
 tx-sender
-::get_contracts
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto deduct-fee)
-tx-sender
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u5 true)
-::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 true)
-::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 false)
-::set_tx_sender ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u15 false)
-::set_tx_sender ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u25 false)
-::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
-::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
-::set_tx_sender ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result false)
-tx-sender
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u5 true)
-::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 true)
-::set_tx_sender ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u10 false)
-::set_tx_sender ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u15 false)
-::set_tx_sender ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto check-play tx-sender u25 false)
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-::set_tx_sender STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
-::set_tx_sender ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
-(contract-call? 'STH4FEPVGPZ82GHCT7K0ZTCQRXXYPYM21JDFC5GX.predicto prediction-result true)
+::set_tx_sender ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto play-game tx-sender u100 false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto prediction-result false)
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto prediction-result true)
+::get_assets_maps
+(contract-call? 'ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.predicto prediction-result false)
+(var-get result)
